--- a/src/main/webapp/debug.html
+++ b/src/main/webapp/debug.html
@@ -12,15 +12,15 @@
 
 <link rel="stylesheet" href="style/gs-bootstrap.css">
 
-<script type="text/javascript" charset="UTF-8" src="js/emitter.js"></script>
-<script type="text/javascript" charset="UTF-8" src="js/util.js"></script>
+<script type="text/javascript" charset="UTF-8" src="js/events.js"></script>
+<script type="text/javascript" charset="UTF-8" src="js/buffer.js"></script>
+<script type="text/javascript" charset="UTF-8" src="js/queue.js"></script>
 <script type="text/javascript" charset="UTF-8" src="js/streams.js"></script>
 <script type="text/javascript" charset="UTF-8" src="js/security.js"></script>
 <script type="text/javascript" charset="UTF-8" src="js/generator.js"></script>
 <script type="text/javascript" charset="UTF-8" src="js/web.js"></script>
 <script type="text/javascript" charset="UTF-8" src="js/socket.js"></script>
 <script type="text/javascript" charset="UTF-8" src="js/engine.js"></script>
-<script type="text/javascript" charset="UTF-8" src="sample.js"></script>
 
 <script type="text/javascript" charset="UTF-8" src="sample.js"></script>
 
@@ -48,24 +48,24 @@
 			</div>
 		</nav>
 	</div>
-
+	
 	<div id="wrapper" class="mt-3">
-
+	
 		<div class="row justify-content-md-center">
 			<div class="col-md-8">
 				<div class="card">
 
 				<div class="card-body">
 				<p>Check out sample.js source to learn how to use Quark Engine in browser or</p>
-				<p>check out io.greenscreens.demo Java package to learn how to use Quark Engine on Java Server side</p>
+				<p>check out io.greenscreens.demo Java package to learn how to use Quark Engine on Java Server side</p>				
 				<p>Visit project page at <a href="https://www.greenscreens.io/quark">https://www.greenscreens.io/quark</a></p>
-				</div>
+				</div>            					
 
 				</div>
 				<!-- end card -->
 			</div>
-		</div>
-
+		</div>		
+		
 		<div class="row justify-content-md-center text-muted small">&copy; 2016. - 2020. by Green Screens Ltd.</div>
 	</div>
 
